182041-manifest-v2.yml
apiVersion: v1
kind: Namespace
metadata:
  name: 182041-namespace

---

apiVersion: v1
kind: Service
metadata:
  name: service-182041-v2
  namespace: 182041-namespace
spec:
  selector:
    app: pod-182041
    version: "2"  # Enclose the version in quotes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: 182041-manifest-v2
  namespace: 182041-namespace
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  selector:
    matchLabels:
      app: pod-182041
      version: "2"  # Enclose the version in quotes
  template:
    metadata:
      labels:
        app: pod-182041
        version: "2"  # Enclose the version in quotes
    spec:
      containers:
        - name: 182041-container
          image: paunovskidavid/lab8:2.0
          ports:
            - containerPort: 80
